--- a/app/views/layouts/shared_user/_header.html.erb
+++ b/app/views/layouts/shared_user/_header.html.erb
@@ -9,30 +9,28 @@
         <%= image_tag 'icon_user_kpu.png', width: 100, height: 85, class: "d-inline-block align-text-top", style: 'float: right; margin-top: 10px;' %>
       </div>
     </div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="float: right;">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="float: right;">
+    <div class="navbar-collapse" id="navbarSupportedContent" style="float: right;">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       </ul>
       <div>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Beranda</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Berita Acara</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Tutorial</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">Voting</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="#">About Us</a>
-          </li>
+          <div class="row">
+            <li class="nav-item" style="padding-right: 10px;">
+              <a class="nav-link active text-white" aria-current="page" href="#">Beranda</a>
+            </li>
+            <li class="nav-item" style="padding-right: 10px;">
+              <a class="nav-link active text-white" aria-current="page" href="#">Berita Acara</a>
+            </li>
+            <li class="nav-item" style="padding-right: 10px;">
+              <a class="nav-link active text-white" aria-current="page" href="#">Tutorial</a>
+            </li>
+            <li class="nav-item" style="padding-right: 10px;">
+              <a class="nav-link active text-white" aria-current="page" href="#">Voting</a>
+            </li>
+            <li class="nav-item" style="padding-right: 10px;">
+              <a class="nav-link active text-white" aria-current="page" href="#">About Us</a>
+            </li>
+          </div>
         </ul>
       </div>
     </div>
