--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,7 +76,7 @@
               <%= image_tag 'sidebar-4.jpg' %>
             </a>
           </li>
-          <li class="header-title">Thank you for 95 shares!</li>
+          <li class="header-title">Thank you</li>
           <li class="button-container text-center">
             <button id="twitter" class="btn btn-round btn-twitter"><i class="fa fa-twitter"></i> &middot; 45</button>
             <button id="facebook" class="btn btn-round btn-facebook"><i class="fa fa-facebook-f"></i> &middot; 50</button>
