--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -17,7 +17,7 @@
     <div class="card">
       <div class="card-header card-header-primary">
         <h4 class="card-title">List Posts</h4>
-        <p class="card-category">List Calon Ketua</p>
+        <p class="card-category">List Calon & Wakil Ketua</p>
       </div>
       <div class="card-body">
         <div class="table-responsive">
