--- a/app/views/layouts/shared_user/_footer.html.erb
+++ b/app/views/layouts/shared_user/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- Footer -->  
-<footer class="text-lg-start text-white">
-  <div class="p-3 fixed-bottom">
+<footer class="text-lg-start text-white fixed-bottom">
+  <div class="p-3">
     <span class="text-black">Contact:</span><br>
     <%= render 'layouts/shared_user/instagram' %>
     <span class="text-black">@himakafikom.vote</span><br>
