--- a/app/views/layouts/shared_user/_header.html.erb
+++ b/app/views/layouts/shared_user/_header.html.erb
@@ -30,6 +30,13 @@
             <li class="nav-item" style="padding-right: 10px;">
               <a class="nav-link active text-white" aria-current="page" href="#">About Us</a>
             </li>
+            <li class="nav-item" style="padding-right: 10px;">
+              <% if user_signed_in? %>
+                <%= link_to 'Logout', destroy_user_session_path(from_user: true), method: :delete, class: 'nav-link active text-white' %>
+              <% else %>
+                <%= link_to 'Login', new_user_session_path, class: 'nav-link active text-white' %>
+              <% end %>
+            </li>
           </div>
         </ul>
       </div>
