--- a/app/views/user/devise/registrations/new.html.erb
+++ b/app/views/user/devise/registrations/new.html.erb
@@ -1,29 +1,100 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "user/devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-7">
+      <div class="card">
+        <h2 class="card-title text-center">Sign Up</h2>
+        <div class="card-body py-md-4">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <div class="form-group">
+              <%= f.text_field :full_name, class: 'form-control', id: 'name', placeholder: 'Full Name', autocomplete: :off, required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.text_field :npm, class: 'form-control', id: 'npm', placeholder: 'NPM', autocomplete: :off, required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.email_field :email, class: 'form-control form-control-sm', id: 'email', autocomplete: :off, placeholder: 'Email', required: true %>
+            </div>
+            <div class="form-group">
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, class: 'form-control', id: 'password', placeholder: 'Password', required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.password_field :password_confirmation, class: 'form-control', id: 'confirm-password', placeholder: 'confirm-password', required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.label :avata, 'Photo User' %><br>
+              <%= f.file_field :avatar, id: 'file', onchange: 'preview()', required: true %>
+              <%= f.hidden_field :avatar, value: f.object.cached_avatar_data %>
+              <img src="" id="frame" width="200" height="150">
+            </div>
+            <div class="d-flex flex-row align-items-center justify-content-between">
+              <a href="<%= new_user_session_path %>">Login</a>
+              <button class="btn btn-primary">Create Account</button>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+<script>
+  function preview() {
+    frame.src=URL.createObjectURL(event.target.files[0]);
+  }
+</script>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+<style>
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+body{
+  background: #fff;
+  font-family: 'PT Sans', sans-serif;
+}
+h2{
+  padding-top: 1.5rem;
+}
+a{
+  color: #333;
+}
+a:hover{
+  color: #da5767;
+  text-decoration: none;
+}
+.card{
+  border: 0.40rem solid #f8f9fa;
+  top: 10%;
+}
+.form-control{
+  background-color: #f8f9fa;
+  padding: 20px;
+  padding: 25px 15px;
+  margin-bottom: 1.3rem;
+}
 
-<%= render "user/devise/shared/links" %>
+.form-control:focus {
+
+  color: #000000;
+  background-color: #ffffff;
+  border: 3px solid #da5767;
+  outline: 0;
+  box-shadow: none;
+
+}
+
+.btn{
+  padding: 0.6rem 1.2rem;
+  background: #da5767;
+  border: 2px solid #da5767;
+}
+.btn-primary:hover {
+
+
+  background-color: #df8c96;
+  border-color: #df8c96;
+  transition: .3s;
+
+}
+</style>
