--- a/app/views/layouts/shared_user/_header.html.erb
+++ b/app/views/layouts/shared_user/_header.html.erb
@@ -6,13 +6,16 @@
         <span class="position-absolute" style="margin-left: 10px; color: #f4c588; margin-top: 22px;"><b>KPU HIMAKA<br>FIKOM UNPAD</b></span>
       </div>
       <div class="col">
-        <%= image_tag 'icon_user_kpu.png', width: 100, height: 85, class: "d-inline-block align-text-top", style: 'float: right; margin-top: 10px;' %>
+        <%= image_tag 'icon_user_kpu.png', width: 105, height: 85, class: "d-inline-block align-text-top", style: 'float: right; margin-top: 10px;' %>
       </div>
     </div>
-    <div class="navbar-collapse" id="navbarSupportedContent" style="float: right;">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      </ul>
-      <div>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="margin-left: 18px;">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="float: right;">
+      <div class="col">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <div class="row">
             <li class="nav-item" style="padding-right: 10px;">
