--- a/app/views/user/homes/index.html.erb
+++ b/app/views/user/homes/index.html.erb
@@ -1,6 +1,6 @@
-<!-- <div class="container pt-4">
+<div class="container pt-4">
   <div class="row">
-    <%# @posts.each do |post| %>
+    <% @posts.each do |post| %>
       <div class="col-md-4 p-3">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="<%#= post.ketua_url %>" alt="Card image cap">
@@ -11,6 +11,6 @@
           </div>
         </div>
       </div>
-    <%# end %>
+    <% end %>
   </div>
-</div> -->
+</div>
