user can 1x voted on post

--- a/app/views/user/homes/index.html.erb
+++ b/app/views/user/homes/index.html.erb
@@ -1,14 +1,33 @@
-<div class="container pt-4">
-  <div class="row">
+<div class="container">
+  <div class="card-deck">
     <% @posts.each do |post| %>
-      <div class="col-md-4 p-3">
-        <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="<%#= post.ketua_url %>" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="card">
+        <div class="row">
+          <div class="col-md-6">
+            <img class="card-img-top" src="<%= post.ketua_url %>" alt="Card image cap">
+            <p class="text-center"><%= post.name_1 %></p>
           </div>
+          <div class="col-md-6">
+            <img class="card-img-top" src="<%= post.wakil_url %>" alt="Card image cap">
+            <p class="text-center"><%= post.name_1 %></p>
+          </div>
+        </div>
+        <div class="card-body">
+          <p class="card-text">
+            visi : <%= post.visi %><br>
+            Misi : <%= post.misi %>
+          </p>
+        </div>
+        <div class="card-footer">
+          <% if post.voted_up_by? current_user %>
+            <small class="btn btn-danger col-12">Voted</small>
+          <% else %>
+            <% if current_user.find_voted_items.present? %>
+              <small class="btn btn-danger col-12">Voted</small>
+            <% else %>
+              <%= link_to 'Vote', vote_user_home_path(post), class: 'btn btn-primary col-12', method: :patch %>
+            <% end %>
+          <% end %>
         </div>
       </div>
     <% end %>
