--- a/app/views/user/homes/index.html.erb
+++ b/app/views/user/homes/index.html.erb
@@ -19,14 +19,18 @@
           </p>
         </div>
         <div class="card-footer">
-          <% if post.voted_up_by? current_user %>
-            <small class="btn btn-danger col-12">Voted</small>
-          <% else %>
-            <% if current_user.find_voted_items.present? %>
+          <% if user_signed_in? %>
+            <% if post.voted_up_by? current_user %>
               <small class="btn btn-danger col-12">Voted</small>
             <% else %>
-              <%= link_to 'Vote', vote_user_home_path(post), class: 'btn btn-primary col-12', method: :patch %>
+              <% if current_user.find_voted_items.present? %>
+                <small class="btn btn-danger col-12">Voted</small>
+              <% else %>
+                <%= link_to 'Vote', vote_user_home_path(post), class: 'btn btn-primary col-12', method: :patch %>
+              <% end %>
             <% end %>
+          <% else %>
+            <small class="btn btn-danger col-12">Login For Vote!</small>
           <% end %>
         </div>
       </div>
