--- a/app/views/user/homes/index.html.erb
+++ b/app/views/user/homes/index.html.erb
@@ -4,11 +4,11 @@
       <div class="card">
         <div class="row">
           <div class="col-md-6">
-            <img class="card-img-top" src="<%= post.ketua_url %>" alt="Card image cap">
+            <%= image_tag post.ketua(:medium).url, class: 'img-fluid img-thumbnail rounded mx-auto d-block' %>
             <p class="text-center"><%= post.name_1 %></p>
           </div>
           <div class="col-md-6">
-            <img class="card-img-top" src="<%= post.wakil_url %>" alt="Card image cap">
+            <%= image_tag post.wakil(:medium).url, class: 'img-fluid img-thumbnail rounded mx-auto d-block' %>
             <p class="text-center"><%= post.name_1 %></p>
           </div>
         </div>
