--- a/app/views/layouts/application_user.html.erb
+++ b/app/views/layouts/application_user.html.erb
@@ -31,7 +31,7 @@
         </div>
         <div class="container">
           <% flash.each do |type, msg| %>
-            <div class="alert alert-info">
+            <div class="alert <%= type.eql?("notice") ? 'alert-success' : 'alert-danger' %>">
               <%= msg %>
             </div>
           <% end %>
