--- a/app/views/layouts/shared/_sidebar.html.erb
+++ b/app/views/layouts/shared/_sidebar.html.erb
@@ -18,7 +18,7 @@
       </li>
       <li class="nav-item <%= 'active' if params[:controller].include?('admin/users') %>">
         <%= link_to admin_users_path, class: "nav-link" do %>
-          <i class="material-icons">content_paste</i>
+          <i class="material-icons">person</i>
           <p>Data User</p>
           <% end %>
       </li>
