--- a/app/views/admin/homes/index.html.erb
+++ b/app/views/admin/homes/index.html.erb
@@ -13,7 +13,7 @@
       <div class="card-footer">
         <div class="stats">
           <i class="material-icons text-warning">warning</i>
-          <a href="#pablo" class="warning-link">Get More Space...</a>
+          <a href="#" class="warning-link">Get More Space...</a>
         </div>
       </div>
     </div>
@@ -32,7 +32,7 @@
       <div class="card-footer">
         <div class="stats">
           <i class="material-icons text-warning">warning</i>
-          <a href="#pablo" class="warning-link">Get More Space...</a>
+          <a href="#" class="warning-link">Get More Space...</a>
         </div>
       </div>
     </div>
@@ -47,14 +47,14 @@
           <i class="material-icons">person</i>
         </div>
         <p class="card-category">Jumlah Vote User</p>
-        <h3 class="card-title"><%#= User.get_vote_user %>
+        <h3 class="card-title"><%= User.get_vote_user %>
           <small></small>
         </h3>
       </div>
       <div class="card-footer">
         <div class="stats">
           <i class="material-icons text-warning">warning</i>
-          <a href="#pablo" class="warning-link">Show User</a>
+          <a href="#" class="warning-link">Show User</a>
         </div>
       </div>
     </div>
@@ -66,54 +66,40 @@
           <i class="material-icons">person</i>
         </div>
         <p class="card-category">Jumlah User Tidak Vote</p>
-        <h3 class="card-title"><%#= User.get_unvote_user %>
+        <h3 class="card-title"><%= User.get_unvote_user %>
           <small></small>
         </h3>
       </div>
       <div class="card-footer">
         <div class="stats">
           <i class="material-icons text-warning">warning</i>
-          <a href="#pablo" class="warning-link">Get More Space...</a>
+          <a href="#" class="warning-link">Get More Space...</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
-    <div class="card card-stats">
-      <div class="card-header card-header-success card-header-icon">
-        <div class="card-icon">
-          <i class="material-icons">person</i>
+</div>
+
+<div class="row">
+  <% @posts.each_with_index do |post, idx| %>
+    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
+      <div class="card card-stats">
+        <div class="card-header card-header-success card-header-icon">
+          <div class="card-icon">
+            <i class="material-icons">content_paste</i>
+          </div>
+          <p class="card-category">Jumlah Post <%= idx+1 %></p>
+          <h3 class="card-title"><%= post.total_vote %>
+            <small></small>
+          </h3>
         </div>
-        <p class="card-category">Jumlah Vote Post</p>
-        <h3 class="card-title"><%#= User.get_unvote_user %>
-          <small></small>
-        </h3>
-      </div>
-      <div class="card-footer">
-        <div class="stats">
-          <i class="material-icons text-warning">warning</i>
-          <a href="#pablo" class="warning-link">Get More Space...</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
-    <div class="card card-stats">
-      <div class="card-header card-header-success card-header-icon">
-        <div class="card-icon">
-          <i class="material-icons">person</i>
-        </div>
-        <p class="card-category">Jumlah Post Tidak Vote</p>
-        <h3 class="card-title"><%#= User.get_unvote_user %>
-          <small></small>
-        </h3>
-      </div>
-      <div class="card-footer">
-        <div class="stats">
-          <i class="material-icons text-warning">warning</i>
-          <a href="#pablo" class="warning-link">Get More Space...</a>
+        <div class="card-footer">
+          <div class="stats">
+            <i class="material-icons text-warning">warning</i>
+            <a href="#" class="warning-link">Show Post</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  <% end %>
 </div>
