--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,6 +14,7 @@
                 <th>Email</th>
                 <th>Full Name</th>
                 <th>NPM</th>
+                <th>Jadwal Vote</th>
                 <th></th>
               </tr>
             </thead>
@@ -24,6 +25,7 @@
                   <td><%= user.email %></td>
                   <td><%= user.full_name.try(:titleize) %></td>
                   <td><%= user.npm %></td>
+                  <td><%= "#{date_time(user.jadwal_vote.start_time)} - #{get_time(user.jadwal_vote.end_time)}" %></td>
                   <td class="text-right">
                     <%= link_to 'Show', admin_user_path(user), class: 'btn btn-primary' %>
                   </td>
