--- a/app/views/admin/jadwal_votes/_form.html.erb
+++ b/app/views/admin/jadwal_votes/_form.html.erb
@@ -14,7 +14,7 @@
         </div>
         <div class='col-sm-12'>
           <div class="form-group">
-            <label for="datetimepicker2">Start Time</label><br>
+            <label for="datetimepicker2">End Time</label><br>
             <%= form.text_field :end_time, class: 'form-control datetimepicker2', id: 'datetimepicker2' %>
           </div>
         </div>
