--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,10 @@
 <div class="row">
   <div class="col-md-12">
+    <% flash.each do |type, msg| %>
+      <div class="alert <%= type.eql?("notice") ? 'alert-success' : 'alert-danger' %>">
+        <%= msg %>
+      </div>
+    <% end %>
     <div class="card">
       <div class="card-header card-header-primary">
         <h4 class="card-title">List Users</h4>
@@ -28,6 +33,11 @@
                   <td><%= "#{date_time(user.jadwal_vote.start_time)} - #{get_time(user.jadwal_vote.end_time)}" %></td>
                   <td class="text-right">
                     <%= link_to 'Show', admin_user_path(user), class: 'btn btn-primary' %>
+                    <% if user.active_user %>
+                      <%= link_to 'NoActivated', nonactive_user_admin_user_path(user), class: 'btn btn-danger', :data => {:confirm => 'Are you sure?'}, method: :patch %>
+                    <% else %>
+                      <%= link_to 'Activated', active_user_admin_user_path(user), class: 'btn btn-success', :data => {:confirm => 'Are you sure?'}, method: :patch %>
+                    <% end %>
                   </td>
                 </tr>
               <% end %>
