--- a/app/views/user/devise/registrations/new.html.erb
+++ b/app/views/user/devise/registrations/new.html.erb
@@ -4,6 +4,7 @@
       <div class="card">
         <h2 class="card-title text-center">Sign Up</h2>
         <div class="card-body py-md-4">
+          <%= render 'user/devise/shared/error_messages' %>
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <div class="form-group">
               <%= f.text_field :full_name, class: 'form-control', id: 'name', placeholder: 'Full Name', autocomplete: :off, required: true %>
@@ -23,15 +24,15 @@
             <div class="form-group">
               <%= f.password_field :password_confirmation, class: 'form-control', id: 'confirm-password', placeholder: 'confirm-password', required: true %>
             </div>
-            <div class="form-group">
+            <div class="form-group" id="avatar_data">
               <%= f.label :avata, 'Photo User' %><br>
-              <%= f.file_field :avatar, id: 'file', onchange: 'preview()', required: true %>
               <%= f.hidden_field :avatar, value: f.object.cached_avatar_data %>
+              <%= f.file_field :avatar, id: 'file', onchange: 'preview()', required: true %>
               <img src="" id="frame" width="200" height="150">
             </div>
             <div class="d-flex flex-row align-items-center justify-content-between">
               <a href="<%= new_user_session_path %>">Login</a>
-              <button class="btn btn-primary">Create Account</button>
+              <%= f.submit 'Create Account', class: 'btn btn-primary' %>
             </div>
           <% end %>
         </div>
