--- a/app/views/user/devise/shared/_error_messages.html.erb
+++ b/app/views/user/devise/shared/_error_messages.html.erb
@@ -8,7 +8,9 @@
     </h2>
     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <div class="alert alert-danger">
+          <%= message %>
+        </div>
       <% end %>
     </ul>
   </div>
