--- a/app/views/layouts/shared_user/_header.html.erb
+++ b/app/views/layouts/shared_user/_header.html.erb
@@ -19,19 +19,16 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <div class="row">
             <li class="nav-item" style="padding-right: 10px;">
-              <a class="nav-link active text-white" aria-current="page" href="#">Beranda</a>
+              <a class="nav-link active text-white" aria-current="page" href="<%= beranda_user_homes_path %>">Beranda</a>
             </li>
             <li class="nav-item" style="padding-right: 10px;">
-              <a class="nav-link active text-white" aria-current="page" href="#">Berita Acara</a>
+              <a class="nav-link active text-white" aria-current="page" href="<%= tutorial_user_homes_path %>">Tutorial</a>
             </li>
             <li class="nav-item" style="padding-right: 10px;">
-              <a class="nav-link active text-white" aria-current="page" href="#">Tutorial</a>
+              <a class="nav-link active text-white" aria-current="page" href="<%= user_homes_path %>">Voting</a>
             </li>
             <li class="nav-item" style="padding-right: 10px;">
-              <a class="nav-link active text-white" aria-current="page" href="#">Voting</a>
-            </li>
-            <li class="nav-item" style="padding-right: 10px;">
-              <a class="nav-link active text-white" aria-current="page" href="#">About Us</a>
+              <a class="nav-link active text-white" aria-current="page" href="<%= about_us_user_homes_path %>">About Us</a>
             </li>
             <li class="nav-item" style="padding-right: 10px;">
               <% if user_signed_in? %>
