--- a/app/views/user/homes/index.html.erb
+++ b/app/views/user/homes/index.html.erb
@@ -1,39 +1,42 @@
-<div class="container">
+<center class="pt-3"><h1 style="color: #425b35">VOTING</h1></center>
+<hr style="height:5px;border-width:3;color:#000000;background-color:#000000;width:50%">
+<div class="container pt-3">
   <div class="card-deck">
     <% @posts.each do |post| %>
-      <div class="card">
+      <div class="card" style="background-color: #425b35">
         <div class="row">
           <div class="col-md-6">
-            <%= image_tag post.ketua(:medium).url, class: 'img-fluid img-thumbnail rounded mx-auto d-block' %>
-            <p class="text-center"><%= post.name_1 %></p>
+            <p class="text-center text-white"><%= post.name_1 %></p>
+            <%= image_tag post.ketua(:small).url, class: 'img-fluid img-thumbnail rounded mx-auto d-block' %>
           </div>
           <div class="col-md-6">
-            <%= image_tag post.wakil(:medium).url, class: 'img-fluid img-thumbnail rounded mx-auto d-block' %>
-            <p class="text-center"><%= post.name_1 %></p>
+            <p class="text-center text-white"><%= post.name_1 %></p>
+            <%= image_tag post.wakil(:small).url, class: 'img-fluid img-thumbnail rounded mx-auto d-block' %>
           </div>
         </div>
-        <div class="card-body">
-          <p class="card-text"><h4>Visi</h4></p>
-          <p><%= post.visi %></p>
-          <p class="card-text"><h4>Misi</h4></p>
-          <p><%= post.misi %></p>
+        <div class="card-body text-white">
+          <center><p class="card-text"><h4>Visi</h4></p></center>
+          <center><p><%= post.visi %></p></center>
+          <center><p class="card-text"><h4>Misi</h4></p></center>
+          <center><p><%= post.misi %></p></p></center>
         </div>
         <div class="card-footer">
           <% if user_signed_in? %>
             <% if post.voted_up_by? current_user %>
-              <small class="btn btn-danger col-12">Voted</small>
+              <small class="btn btn-success col-12 disabled">Voted</small>
             <% else %>
               <% if current_user.find_voted_items.present? %>
-                <small class="btn btn-danger col-12">Voted</small>
+                <small class="btn btn-success col-12 disabled">Voted</small>
               <% else %>
                 <%= link_to 'Vote', vote_user_home_path(post), class: 'btn btn-primary col-12', method: :patch %>
               <% end %>
             <% end %>
           <% else %>
-            <small class="btn btn-danger col-12">Login For Vote!</small>
+            <small class="btn btn-success col-12 disabled">Login For Vote!</small>
           <% end %>
         </div>
       </div>
     <% end %>
   </div>
 </div>
+<br><br><br><br>
