--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -4,4 +4,4 @@
 <center><h5>To active your account, please clink on the button below to verify your email addres. Once</h5></center>
 <center><h5>active, you’ll have full access to vote candidate pemilu himaka 2021.</h5></center>
 <center><h5>If there are any obstacles during the voting, you can contact</h5></center>
-<center><h5>Ikon wa: no sekhum | ig icon: username himakavote | line icon: id diyanah</h5></center>
+<center><h5><%= image_tag(attachments['whatsapp-brands.png'].url, width: 32, height: 32, style: 'display: inline-block;') %> : 08882042790 | <%= image_tag(attachments['instagram.png'].url, style: 'display: inline-block;') %> : himakafikom.vote | <%= image_tag(attachments['line-brands.png'].url, width: 32, height: 32, style: 'display: inline-block;') %> : diyzhr | masita_09</h5></center>
