--- a/app/views/layouts/shared_user/_footer.html.erb
+++ b/app/views/layouts/shared_user/_footer.html.erb
@@ -1,10 +1,16 @@
 <!-- Footer -->  
-<footer class="text-lg-start text-white">
+<footer class="text-lg-start text-white fixed-bottom">
   <div class="p-3">
-    <span class="text-black">Contact:</span><br>
-    <%= render 'layouts/shared_user/instagram' %>
-    <span class="text-black">@himakafikom.vote</span><br>
-    <%= render 'layouts/shared_user/email' %>
-    <span class="text-black">pemilu.himaka@gmail.com</span>
+    <span style="color: black;">Contact:</span><br>
+    <%= image_tag 'instagram.png', class: "d-inline-block align-text-top" %>
+    <span style="color: black;">himakafikom.vote</span><br>
+    <%= image_tag 'email.png', class: "d-inline-block align-text-top" %>
+    <span style="color: black;">pemilu.himaka@gmail.com</span><br>
+    <%= image_tag 'line-brands.png', class: "d-inline-block align-text-top", width: 32, height: 32 %>
+    <span style="color: black;">diyzhr</span><br>
+    <%= image_tag 'line-brands.png', class: "d-inline-block align-text-top", width: 32, height: 32 %>
+    <span style="color: black;">masita_09</span><br>
+    <%= image_tag 'whatsapp-brands.png', class: "d-inline-block align-text-top", width: 32, height: 32 %>
+    <span style="color: black;">08882042790</span><br>
   </div>
 </footer>
