--- a/app/views/layouts/shared_user/_header.html.erb
+++ b/app/views/layouts/shared_user/_header.html.erb
@@ -2,11 +2,14 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col">
-        <%= image_tag 'logo.png', width: 100, height: 100, class: "d-inline-block align-text-top" %>
-        <span class="position-absolute" style="margin-left: 10px; color: #f4c588; margin-top: 22px;"><b>KPU HIMAKA<br>FIKOM UNPAD</b></span>
+        <%= image_tag 'logo.png', width: 130, height: 130, class: "d-inline-block align-text-top" %>
+        <span class="position-absolute" style="margin-left: 10px; color: #f4c588; margin-top: 37px;"><b>KPU HIMAKA<br>FIKOM UNPAD</b></span>
       </div>
       <div class="col">
-        <%= image_tag 'icon_user_kpu.png', width: 105, height: 85, class: "d-inline-block align-text-top", style: 'float: right; margin-top: 10px;' %>
+        <%= image_tag 'icon_user_kpu.png', width: 95, height: 80, class: "d-inline-block align-text-top", style: 'float: right; margin-top: 20px;' %>
+        <% if user_signed_in? %>
+          <span class="position-relative" style="color: #f4c588; margin-top: 37px; float: right;"><b><%= current_user.full_name %><br><%= current_user.npm %></b></span>
+        <% end %>
       </div>
     </div>
 
@@ -28,7 +31,7 @@
               <a class="nav-link active text-white" aria-current="page" href="<%= user_homes_path %>">Voting</a>
             </li>
             <li class="nav-item" style="padding-right: 10px;">
-              <a class="nav-link active text-white" aria-current="page" href="<%= about_us_user_homes_path %>">About Us</a>
+              <a class="nav-link active text-white" aria-current="page" href="<%= about_us_user_homes_path %>">Contact</a>
             </li>
             <li class="nav-item" style="padding-right: 10px;">
               <% if user_signed_in? %>
