update after confirm automatic sign in

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
 <center><h5>Welcome to Himaka Fikom Vote 2021,</h5></center>
-<center><h5>bagas20002@mail.unpad.ac.id</h5></center>
+<center><h5><%= @user.email %></h5></center>
 <center><h5><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></h5></center>
 <center><h5>To active your account, please clink on the button below to verify your email addres. Once</h5></center>
 <center><h5>active, you’ll have full access to vote candidate pemilu himaka 2021.</h5></center>
