update jadwal vote angkatan

--- a/app/views/admin/jadwal_votes/_form.html.erb
+++ b/app/views/admin/jadwal_votes/_form.html.erb
@@ -19,6 +19,12 @@
             <%= form.text_field :end_time, class: 'form-control', id: 'datetimepicker1' %>
           </div>
         </div>
+        <div class='col-sm-12'>
+          <div class="form-group">
+            <label>Angkatan</label><br>
+            <%= form.number_field :angkatan, class: 'form-control' %>
+          </div>
+        </div>
       </div>
       <%= form.submit class: 'btn btn-primary' %>
     </div>
