--- a/app/views/admin/jadwal_votes/index.html.erb
+++ b/app/views/admin/jadwal_votes/index.html.erb
@@ -14,6 +14,7 @@
                 <th>No</th>
                 <th>Start Time</th>
                 <th>End Time</th>
+                <th>Angkatan</th>
                 <th></th>
               </tr>
             </thead>
@@ -23,6 +24,7 @@
                   <td><%= idx+1 %></td>
                   <td><%= date_time(vote.start_time) %></td>
                   <td><%= date_time(vote.end_time) %></td>
+                  <td><%= vote.angkatan %></td>
                   <td class="text-right">
                     <%= link_to 'Edit', edit_admin_jadwal_vote_path(vote), class: 'btn btn-primary' %>
                     <%= link_to 'Delete', admin_jadwal_vote_path(vote), class: 'btn btn-danger', data: { confirm: "Are you sure?" },method: :delete %>
