mobile responsive card on page voting

--- a/app/views/user/homes/index.html.erb
+++ b/app/views/user/homes/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container pt-3">
   <div class="card-deck">
     <% @posts.each do |post| %>
-      <div class="card" style="background-color: #425b35; width: 18rem;">
+      <div class="card" style="background-color: #425b35;">
         <div class="row">
           <div class="col-md-12">
             <p class="text-center text-white"><%= post.name_1 %></p>
