--- a/app/views/user/devise/confirmations/new.html.erb
+++ b/app/views/user/devise/confirmations/new.html.erb
@@ -1,16 +1,70 @@
+<div class="global-container">
+  <div class="card login-form">
+    <div class="card-body">
+      <h3 class="card-title text-center">Resend confirmation instructions</h3>
+      <div class="card-text">
+        <% flash.each do |type, msg| %>
+          <div class="alert <%= type.eql?("notice") ? 'alert-success' : 'alert-danger' %>">
+            <%= msg %>
+          </div>
+        <% end %>
+        <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+          <div class="form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, class: 'form-control form-control-sm', id: 'exampleInputEmail1', autocomplete: :off, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+          </div>
+          <div class="actions">
+            <%= f.submit "Resend confirmation instructions", class: 'btn btn-primary' %>
+          </div>
+        <% end %>
+        <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<style>
+html,body { 
+  height: 100%; 
+}
+
+.global-container{
+  height:100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f5f5f5;
+}
+
+form{
+  padding-top: 10px;
+  font-size: 14px;
+  margin-top: 30px;
+}
+
+.card-title{ font-weight:300; }
+
+.btn{
+  font-size: 14px;
+  margin-top:20px;
+}
+
+
+.login-form{ 
+  width:330px;
+  margin:20px;
+}
+
+.sign-up{
+  text-align:center;
+  padding:20px 0 0;
+}
+
+.alert{
+  margin-bottom:-30px;
+  font-size: 13px;
+  margin-top:20px;
+}
+</style>
+
 <h2>Resend confirmation instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "user/devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "user/devise/shared/links" %>
