deploy project to digital ocean

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -49,7 +49,8 @@
                     <td><%= user.full_name.try(:titleize) %></td>
                     <td><%= user.npm %></td>
                     <td><%= user.angkatan %></td>
-                    <td><%= "#{date_time(user.try(:jadwal_vote).try(:start_time))} - #{get_time(user.try(:jadwal_vote).try(:end_time))}" %></td>
+                    <td><%= "#{date_time(user.try(:jadwal_vote).try(:start_time))} - #{date_time(user.try(:jadwal_vote).try(:end_time))}" %></td>
+                    <td></td>
                     <td class="text-right">
                       <div class="row">
                         <div class="form-check">
