--- a/app/views/admin/homes/show_vote_post.html.erb
+++ b/app/views/admin/homes/show_vote_post.html.erb
@@ -7,13 +7,21 @@
       </div>
       <div class="card-body">
         <div class="table-responsive">
-          <h4>Total Vote : <%= @post.votes_for.size %></h4>
+          <h4>Akumulasi Total Vote : <%= @user_votes1 %></h4>
+          <% if params[:jadwal_vote_id].present? %>
+            <h4>Total Vote Tanggal <%= get_date(@jadwal_vote.start_time) %> : <%= @user_votes2 %></h4>
+          <% end %>
+          <% @jadwal_votes.each do |jadwal| %>
+            <%= link_to "Jadwal Vote #{get_date(jadwal.start_time)}", show_vote_post_admin_home_path(@post, jadwal_vote_id: jadwal.id), class: 'btn btn-primary' %>
+          <% end %>
+          <%= link_to "Show All Vote", show_vote_post_admin_home_path(@post), class: 'btn btn-primary' %>
           <table class="table">
             <thead class=" text-primary">
               <tr>
                 <th>No</th>
                 <th>Email</th>
                 <th>Full Name</th>
+                <th>Jadwal Vote</th>
                 <th></th>
               </tr>
             </thead>
@@ -23,6 +31,7 @@
                   <td><%= idx+1 %></td>
                   <td><%= user.voter.email %></td>
                   <td><%= user.voter.full_name %></td>
+                  <td><%= "#{date_time(user.voter.jadwal_vote.try(:start_time))} - #{get_time(user.voter.jadwal_vote.try(:end_time))}" %></td>
                 </tr>
               <% end %>
             </tbody>
